--- a/css/game.css
+++ b/css/game.css
@@ -51,7 +51,7 @@ body{
 
 .menucnt{
     align-items: center;
-    background-image: url('./res/menu.png');
+    background-image: url('../resGame/menu.png');
     border: 2px solid #fff;
     display: flex;
     font-size: 30px;
@@ -99,7 +99,7 @@ body{
     height: 80px;
     left: 485px;
     position: relative;
-    top: -70px;
+    top: -70px;res
     width: 30px;
 } */
 
